--- a/miniprogram/miniprogram/pages/detailExpert/detailExpert.wxml
+++ b/miniprogram/miniprogram/pages/detailExpert/detailExpert.wxml
@@ -16,8 +16,8 @@
   <view class="question-section">
     <block wx:if="{{state === 0}}">
       <view wx:for="{{questions}}" wx:key="index" class="question-card">
-        <view class="question-title">{{item.qTitle}}</view>
-        <view class="question-title-cn">{{item.qTitle_cn}}</view>
+        <view class="question-title">{{item.question_rewrite}}</view>
+        <view class="question-title-cn">{{item.question_cn}}</view>
         <textarea class="answer-input" 
           placeholder=""
           value="{{ item.answerUser }}"
@@ -27,7 +27,7 @@
         <view
           style="width: 100%; margin-bottom: 10px; display: flex; flex-direction: flex-end;">
           <button class="submit-btn"
-            data-qTitle="{{item.qTitle}}"
+            data-qTitle="{{item.question_rewrite}}"
             data-index="{{index}}"
             bindtap="onSubmitAnswer">AI定制答案</button>
         </view>
@@ -43,7 +43,7 @@
       <view wx:for="{{questions}}" wx:key="index" class="question-card {{item.isFlipped ? 'flipped' : ''}}">
         <view class="card-inner">
           <view class="card-front">
-            <view class="question-title">{{item.qTitle}}</view>
+            <view class="question-title">{{item.question_rewrite}}</view>
             <view class="question-tip">soft spoken & natural & eye to eye contact</view>
           </view>
           <view class="card-back">
